Update OD4DC post

--- a/_posts/2014-02-04-od4dc.md
+++ b/_posts/2014-02-04-od4dc.md
@@ -35,4 +35,4 @@ In terms of resources, a good place to begin is with the Challenge Hackpads, all
 
 The discussions that took place during the panels also brought up some interesting points; for example, around the ethics of collecting and using data in international development, especially around vulnerable communities, and the [potential implications](https://www.privacyinternational.org/sites/privacyinternational.org/files/file-downloads/aiding_surveillance.pdf), and designing projects and open data initiatives based around user needs, rather than donor needs. 
 
-In all, there was a great mix of people attending the event - some who had never attended a hackathon before, and others who had rarely had the opportunity to work so closely with people coming from such different perspectives within aid transparency. 
+In all, there was a great mix of people attending the event - some who had never attended a hackathon before, and many who had rarely had the opportunity to work so closely with people coming from such different perspectives within the sector. All in all, a great success at bringing together the open aid community, and hopefully the first of many similar occasions! 
